--- a/Report.qmd
+++ b/Report.qmd
@@ -599,7 +599,11 @@ The imported data sets were validated before being added to the database to ensu
 ### Task 4.1: Advanced Data Analysis in R
 
 ```{r}
-
+library(DBI)
+library(RSQLite)
+library(readr)
+library(dplyr)
+library(plotly)
 ```
 
 ### Task 4.2: Comprehensive Reporting with Quarto
