--- a/Report.qmd
+++ b/Report.qmd
@@ -606,4 +606,20 @@ library(dplyr)
 library(plotly)
 ```
 
+```{r}RSQLite::dbWriteTable(connect,"CUSTOMERS",customer,overwrite=TRUE)}
+RSQLite::dbWriteTable(connect,"ADDRESS",address,overwrite=TRUE)
+RSQLite::dbWriteTable(connect,"PRODUCT",product,overwrite=TRUE)
+RSQLite::dbWriteTable(connect,"DISCOUNT",discount,overwrite=TRUE)
+RSQLite::dbWriteTable(connect,"ORDER_ITEM",order_item,overwrite=TRUE)
+RSQLite::dbWriteTable(connect,"ORDER_DETAIL",order_detail,overwrite=TRUE)
+RSQLite::dbWriteTable(connect,"SUPPLIER",supplier,overwrite=TRUE)
+RSQLite::dbWriteTable(connect,"ADVERTISEMENTS",advertisement,overwrite=TRUE)
+RSQLite::dbWriteTable(connect,"ADVERTISE_IN",advertise_in,overwrite=TRUE)
+RSQLite::dbWriteTable(connect,"CATEGORY",category,overwrite=TRUE)
+
+```
+
+```{}
+```
+
 ### Task 4.2: Comprehensive Reporting with Quarto
