--- a/data_validation_and_load.Rmd
+++ b/data_validation_and_load.Rmd
@@ -14,7 +14,7 @@ library(RSQLite)
 
 ```
 
-#read files
+## Read Files
 ```{r}
 customer <- readr::read_csv("data_upload/CUSTOMER.csv")
 address <- readr::read_csv("data_upload/ADDRESS.csv")
@@ -59,7 +59,7 @@ for (table_name in names(table_pk)) {
 
 ```
 
-#CUSTOMER
+## CUSTOMER
 ```{r}
 #Check format of first and last name (1st alphabet is uppercase, rest is lowercase)
 invalid_customer_firstname <- customer[!grepl("^[A-Z][a-z]*$", customer$first_name), c("customer_id", "first_name")]
@@ -92,7 +92,7 @@ customer <- customer[!(customer$customer_id %in% bad_customer_record), ]
 
 ```
 
-#ADDRESS
+## ADDRESS
 ```{r}
 #Check for missing data
 na_address_postcode <- address[is.na(address$postcode), "postcode"]
@@ -114,7 +114,7 @@ address <- address[!(address$postcode %in% bad_address_record), ]
 
 ```
 
-# CATEGORY
+## CATEGORY
 ```{r}
 #Check category (can contain alphabets)
 invalid_category_name <- category[!grepl("^[A-Za-z]+( [A-Za-z]+)*$", category$category_name), c("category_id", "category_name")]
@@ -141,7 +141,7 @@ category <- category[!(category$category_id %in% bad_category_record), ]
 
 ```
 
-#SUPPLIER
+## SUPPLIER
 ```{r}
 #Check supplier (can contain alphabets, comma, hyphen, dot)
 invalid_supplier_name <- supplier[!grepl("^[A-Za-z,.-]+( [A-Za-z,.-]+)*$", supplier$supplier_name), c("supplier_id", "supplier_name")]
@@ -170,7 +170,7 @@ supplier <- supplier[!(supplier$supplier_id %in% bad_supplier_record), ]
 
 ```
 
-# DISCOUNT
+## DISCOUNT
 ```{r}
 #Check percent
 invalid_discount_percent <- discount[!grepl("^[0-9]+$", discount$discount_percent), c("promo_code", "discount_percent")]
@@ -187,7 +187,7 @@ discount <- discount[!(discount$promo_code %in% bad_discount_record), ]
 
 ```
 
-# PRODUCT
+## PRODUCT
 ```{r}
 #Check product name (can contain alphabets, comma, hyphen, dot)
 invalid_product_name <- product[!grepl("^[A-Za-z,.-]+( [A-Za-z,.-]+)*$", product$product_name), c("product_id", "product_name")]
@@ -236,7 +236,7 @@ product <- product[!(product$product_id %in% bad_product_record), ]
 
 ```
 
-# ORDER_DETAIL
+## ORDER_DETAIL
 ```{r}
 #Check if customer_id exists in the CUSTOMER table
 invalid_customer_fk <- order_detail[!order_detail$customer_id %in% customer$customer_id, "order_id"]
@@ -284,7 +284,7 @@ order_detail <- order_detail[!(order_detail$order_id %in% bad_order_record), ]
 
 ```
 
-# ORDER_ITEM
+## ORDER_ITEM
 ```{r}
 #Check if order_id exists in the ORDER_ITEM table
 invalid_order_fk <- order_item[!order_item$order_id %in% order_detail$order_id, "order_id"]
@@ -313,7 +313,7 @@ order_item <- order_item[!(order_item$order_id %in% bad_order_item_record), ]
 
 ```
 
-# ADVERTISEMENT
+## ADVERTISEMENT
 ```{r}
 #Check ad frequency (can only contain integer)
 invalid_ad_frequency <- advertisement[!grepl("^[0-9]+$", advertisement$ad_frequency), c("ad_id", "ad_frequency")]
@@ -342,7 +342,7 @@ advertisement <- advertisement[!(advertisement$ad_id %in% bad_advertisement_reco
 
 ```
 
-#ADVERTISE_IN
+## ADVERTISE_IN
 ```{r}
 #Check if ad_id exists in the ADVERTISEMENT table
 invalid_advertisement_fk <- advertise_in[!advertise_in$ad_id %in% advertisement$ad_id, "ad_id"]
